--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@types/node": "^20",
