--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
-    "next": "14.2.3",
+    "@mui/x-charts": "^7.13.0",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
