--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,14 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "plugin:prettier/recommended"
+  ],
+  "globals": {
+    "JSX": "readonly"
+  },
+  "rules": {
+    '@typescript-eslint/no-unused-vars': 'off',
+    "no-unused-vars": "off"
+  }
 }
