--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@mui/x-charts": "^7.13.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "sass": "^1.77.6"
   },
   "devDependencies": {
