--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@mui/x-charts": "^7.13.0",
+    "@mui/x-data-grid": "^7.17.0",
     "@reduxjs/toolkit": "^2.2.7",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
