Readme description and links update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reacterial",
-  "description": "Reacterial is a modern admin web application built with Next.js, React, and Material-UI (MUI)",
+  "description": "Reacterial is a versatile boilerplate for building modern web applications like CRM systems, admin dashboards, and enterprise portals. Built with Next.js, React, Material-UI (MUI), and Redux for scalable state management. Features include authentication, responsive layouts, data visualization, and customizable components.",
   "author": "Marlon M",
   "version": "0.1.0",
   "private": true,
