--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,ts,tsx,vue,css}\"",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "reset-db": "node src/db/scripts/reset-db.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -21,6 +22,8 @@
     "@mui/x-charts": "^7.13.0",
     "@mui/x-data-grid": "^7.17.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
