--- a/src/db/package.json
+++ b/src/db/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "init": "node scripts/init.js",
     "seed": "node scripts/seed.js",
-    "reset": "node scripts/init.js && node scripts/seed.js"
+    "reset": "node scripts/init.js && node scripts/seed.js",
+    "reset-db": "node scripts/reset-db.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
