--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,ts,tsx,vue,css}\"",
     "test": "jest --watch",
-    "test:ci": "jest --ci",
-    "reset-db": "node src/db/scripts/reset-db.js"
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -23,6 +22,7 @@
     "@mui/x-data-grid": "^7.17.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/bcryptjs": "^2.4.6",
+    "aws4": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
