--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@types/bcryptjs": "^2.4.6",
     "aws4": "^1.13.2",
+    "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@types/axios": "^0.14.4",
     "@types/jest": "^29.5.13",
     "@types/node": "^20",
     "@types/react": "^18.3.11",
