--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aws4": "^1.13.2",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
+    "mongoose": "^8.12.1",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
