--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-data-grid": "^7.17.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/bcryptjs": "^2.4.6",
+    "@vercel/speed-insights": "^1.2.0",
     "aws4": "^1.13.2",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
